--- a/app/views/rankings/each_page.html.erb
+++ b/app/views/rankings/each_page.html.erb
@@ -2,22 +2,8 @@
   <%= render "share/h1" %>
   <div class="grid_16">
     <!-- 左側 -->
-    <div class="grid_3 alpha">
-      <h3>スポンサーリンク</h3>
-      <!-- アドセンス -->
-      <script type="text/javascript"><!--
-					google_ad_client = "pub-3481475867852629";
-					/* 120x600, 作成済み 10/10/29 */
-					google_ad_slot = "4981572010";
-					google_ad_width = 120;
-					google_ad_height = 600;
-					//-->
-      </script>
-      <script type="text/javascript"
-	      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-      </script>
-    </div>
-
+    <%= render "share/left_adsense" %>
+    
     <!-- 真ん中 -->
 
     <div class="grid_10">
