--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -3,22 +3,7 @@
   <div class="grid_16">
 
     <!-- 左側 -->
-    <div class="grid_3 alpha">
-      <h2>スポンサーリンク</h2>
-      <!-- アドセンス -->
-      <script type="text/javascript"><!--
-                                        google_ad_client = "pub-3481475867852629";
-                                        /* 120x600, 作成済み 10/10/29 */
-                                        google_ad_slot = "4981572010";
-                                        google_ad_width = 120;
-                                        google_ad_height = 600;
-                                        //-->
-      </script>
-      <script type="text/javascript"
-	      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-      </script>
-    </div>
-
+    <%= render "share/left_adsense"  %>
     <!-- 真ん中 -->
     <div class="grid_10">
       <h2>今日のオリコンランキング</h2>
