--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container_16">
   <%= render "share/h1"  %>
-  <div class="grid_16">
+  <div class="grid_16" id="main_contents">
 
     <!-- 左側 -->
     <%= render "share/left_adsense"  %>
