--- a/app/views/share/_h1.html.erb
+++ b/app/views/share/_h1.html.erb
@@ -1,23 +1,23 @@
 <!-- header -->
 <div class="grid_16 alpha">
-<h1><%= h @config[:h1] %></h1>
-<div class="grid_10 alpha">
-<p>このサイトはオリコンなどのランキングサイトを元に、<strong>Youtube</strong>からなるべく高画質な<strong>PV</strong>を自動的に取得し、視聴できるようにしているサイトです。</p>
-<!-- アドセンスここから -->
-<script type="text/javascript"><!--
-google_ad_client = "pub-3481475867852629";
-/* 468x60, 作成済み 10/10/24 */
-google_ad_slot = "3199526296";
-google_ad_width = 468;
-google_ad_height = 60;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-<!-- アドセンスここまで -->
+  <h1><%= h @config[:h1] %></h1>
+  <div class="grid_10 alpha">
+    <p>このサイトはオリコンランキングを元に、<strong>Youtube</strong>からなるべく高画質な<strong>PV</strong>を自動的に取得し、視聴できるようにしているサイトです。</p>
+    <!-- アドセンスここから -->
+    <script type="text/javascript"><!--
+				      google_ad_client = "pub-3481475867852629";
+				      /* 468x60, 作成済み 10/10/24 */
+				      google_ad_slot = "3199526296";
+				      google_ad_width = 468;
+				      google_ad_height = 60;
+				      //-->
+    </script>
+    <script type="text/javascript"
+	    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
+    <!-- アドセンスここまで -->
 
-</div>
+  </div>
 </div>
 <div class="clear"></div>
 <hr />
