--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="description" content="<%= @config[:description] %>" />
+  <meta name="keywords" content="<%= @config[:keywords] %>" />
 </head>
 <body>
 
