add a8net overture

--- a/app/views/share/_left_adsense.html.erb
+++ b/app/views/share/_left_adsense.html.erb
@@ -12,4 +12,7 @@
       <script type="text/javascript"
 	      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
       </script>
+      
+      <a href="http://px.a8.net/svt/ejp?a8mat=1ZRB3G+EY7VN6+INY+60WN6" target="_blank">Yahoo!リスティング広告</a>
+      <img border="0" width="1" height="1" src="http://www13.a8.net/0.gif?a8mat=1ZRB3G+EY7VN6+INY+60WN6" alt="">
     </div>
